<resources>
    <string name="app_name">SmartCity</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="navigation_Homepage">首页</string>
    <string name="navigation_All_Services">全部服务</string>
    <string name="navigation_New">新闻</string>
    <string name="navigation_Personal">个人中心</string>
    <string name="navigation_Smart_Party_Building">智慧党建</string>
    <string name="homePage_new">Hello blank fragment</string>

</resources>